Manual code quality and checkstyle cleanup